@startuml
skinparam Shadowing false
skinparam MinClassWidth 120
skinparam classBackgroundColor #SkyBlue
skinparam packageStyle rectangle
hide circle
hide members

package UserInterface {
    class "<<Singleton>> \nUserInterface"
    class CalendarWeekRenderer
    class CalendarWeekRendererUtils

    "<<Singleton>> \nUserInterface" -[#SkyBlue]-> CalendarWeekRenderer : creates
    CalendarWeekRenderer -[#SkyBlue][dotted]-> CalendarWeekRendererUtils : creates
}

package Model {

}

package Controller {

}

Model <..[#YellowGreen]. UserInterface
UserInterface -[#SkyBlue]--> Controller :creates
Controller -[#Salmon]----> UserInterface :call prints errors to >

@enduml
